Dealing with deprecations.